--- a/admin-index.html
+++ b/admin-index.html
@@ -21,9 +21,9 @@
         </div>
 
         <div class="items">
-            <li class="active"><i class="fa-solid fa-chart-pie"></i><a href="admin-index.html">Tableau de bord</a></li>
-            <li><i class="fas fa-users-line"></i><a href="admin-reservation.html">Reservation clients</a></li>
-            <li><i class="fa-solid fa-location-pin"></i><a href="admin-ges-destination.html">Gestion des destination</a></li>
+            <li><i class="fa-solid fa-chart-pie"></i><a href="admin-index.html">Tableau de bord</a></li>
+            <li class="active"><i class="fa-solid fa-location-pin"></i><a href="admin-ges-destination.html">Gestion des
+                    destination</a></li>
             <li><i class="fa-solid fa-money-bill"></i><a href="admin-ges-tarifs.html">Gestion des tarifs</a></li>
             <li><i class="fa-solid fa-users"></i></i><a href="admin-ges-users.html">Gestion des utilisateurs</a></li>
             <li><i class="fa-solid fa-user-gear"></i></i><a href="admin-mon-compte.html">Mon compte</a></li>
@@ -56,34 +56,34 @@
                     <i class="fas fa-users"></i>
                     <div>
                         <h3>10</h3>
-                        <span>users</span>
+                        <span>Clients</span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="carte">
-                    <i class="fas fa-users"></i>
+                    <i class="fa-solid fa-eye"></i>
                     <div>
                         <h3>10</h3>
-                        <span>users</span>
+                        <span>Réserver</span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="carte">
-                    <i class="fas fa-users"></i>
+                    <i class="fa-solid fa-ban"></i>
                     <div>
                         <h3>10</h3>
-                        <span>users</span>
+                        <span>Annuler</span>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-3">
                 <div class="carte">
-                    <i class="fas fa-users"></i>
+                    <i class="fa-solid fa-check-to-slot"></i>
                     <div>
                         <h3>10</h3>
-                        <span>users</span>
+                        <span>Confirmer</span>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,6 @@
                         <td>Nombre de passager</td>
                         <td>Tarifs</td>
                         <td>Status</td>
-                        <td></td>
                     </tr>
                 </thead>
                 <tbody>
@@ -123,16 +122,15 @@
                         <td class="people-price">
                             <h5>15000</h5>
                         </td>
-                        <td class="active">
+                        <td class="wait">
                             <p>Reserver</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Manou Loemba</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -149,15 +147,39 @@
                             <h5>15000</h5>
                         </td>
                         <td class="active">
-                            <p>Reserver</p>
+                            <p>Ok</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Sara Loemba</h5>
+                                <p>(+242) 066065050</p>
+                            </div>
+                        </td>
+                        <td class="people-destination">
+                            <h5>Brazzaville</h5>
+                        </td>
+                        <td class="people-date">
+                            <h5>26/11/2022</h5>
+                        </td>
+                        <td class="people-count">
+                            <h5>1</h5>
+                        </td>
+                        <td class="people-price">
+                            <h5>15000</h5>
+                        </td>
+                        <td class="wait">
+                            <p>Reserver</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <img src="img/profile/profile.png" alt="">
+                            <div class="people-name">
+                                <h5>Ariel Tatiana</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -174,15 +196,39 @@
                             <h5>15000</h5>
                         </td>
                         <td class="active">
-                            <p>Reserver</p>
+                            <p>Ok</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Mikael Sitou</h5>
+                                <p>(+242) 066065050</p>
+                            </div>
+                        </td>
+                        <td class="people-destination">
+                            <h5>Brazzaville</h5>
+                        </td>
+                        <td class="people-date">
+                            <h5>26/11/2022</h5>
+                        </td>
+                        <td class="people-count">
+                            <h5>1</h5>
+                        </td>
+                        <td class="people-price">
+                            <h5>15000</h5>
+                        </td>
+                        <td class="wait">
+                            <p>Reserver</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <img src="img/profile/profile.png" alt="">
+                            <div class="people-name">
+                                <h5>Ange Abigael</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -199,15 +245,15 @@
                             <h5>15000</h5>
                         </td>
                         <td class="active">
-                            <p>Reserver</p>
+                            <p>Ok</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Jojo Mvo</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -223,85 +269,9 @@
                         <td class="people-price">
                             <h5>15000</h5>
                         </td>
-                        <td class="active">
+                        <td class="wait">
                             <p>Reserver</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td class="people">
-                            <img src="img/profile/profile.png" alt="">
-                            <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
-                            </div>
-                        </td>
-                        <td class="people-destination">
-                            <h5>Brazzaville</h5>
-                        </td>
-                        <td class="people-date">
-                            <h5>26/11/2022</h5>
-                        </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td class="people">
-                            <img src="img/profile/profile.png" alt="">
-                            <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
-                            </div>
-                        </td>
-                        <td class="people-destination">
-                            <h5>Brazzaville</h5>
-                        </td>
-                        <td class="people-date">
-                            <h5>26/11/2022</h5>
-                        </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td class="people">
-                            <img src="img/profile/profile.png" alt="">
-                            <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
-                            </div>
-                        </td>
-                        <td class="people-destination">
-                            <h5>Brazzaville</h5>
-                        </td>
-                        <td class="people-date">
-                            <h5>26/11/2022</h5>
-                        </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
                     </tr>
                 </tbody>
             </table>
