--- a/admin-ges-destination.html
+++ b/admin-ges-destination.html
@@ -22,8 +22,8 @@
 
         <div class="items">
             <li><i class="fa-solid fa-chart-pie"></i><a href="admin-index.html">Tableau de bord</a></li>
-            <li><i class="fas fa-users-line"></i><a href="admin-reservation.html">Reservation clients</a></li>
-            <li class="active"><i class="fa-solid fa-location-pin"></i><a href="admin-ges-destination.html">Gestion des destination</a></li>
+            <li class="active"><i class="fa-solid fa-location-pin"></i><a href="admin-ges-destination.html">Gestion des
+                    destination</a></li>
             <li><i class="fa-solid fa-money-bill"></i><a href="admin-ges-tarifs.html">Gestion des tarifs</a></li>
             <li><i class="fa-solid fa-users"></i></i><a href="admin-ges-users.html">Gestion des utilisateurs</a></li>
             <li><i class="fa-solid fa-user-gear"></i></i><a href="admin-mon-compte.html">Mon compte</a></li>
@@ -50,263 +50,232 @@
             Gestion des destination
         </h3>
 
-        <div class="cards row">
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="carte">
-                    <i class="fas fa-users"></i>
-                    <div>
-                        <h3>10</h3>
-                        <span>users</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="carte">
-                    <i class="fas fa-users"></i>
-                    <div>
-                        <h3>10</h3>
-                        <span>users</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="carte">
-                    <i class="fas fa-users"></i>
-                    <div>
-                        <h3>10</h3>
-                        <span>users</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="carte">
-                    <i class="fas fa-users"></i>
-                    <div>
-                        <h3>10</h3>
-                        <span>users</span>
-                    </div>
-                </div>
-            </div>
+        <div class="btn-add-dest">
+            <button data-bs-toggle="modal" data-bs-target="#addDest">Ajouter une destination</button>
         </div>
 
         <div class="board">
             <table width="100%" id="user-historique" class="dataTable">
                 <thead>
                     <tr>
-                        <td>Nom</td>
                         <td>Destination</td>
-                        <td>Date depart</td>
-                        <td>Nombre de passager</td>
-                        <td>Tarifs</td>
-                        <td>Status</td>
+                        <td>Description</td>
+                        <td>Zone</td>
                         <td></td>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
-                            <img src="img/profile/profile.png" alt="">
+                            <img src="img/destination/paysage_5.jpg" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
+                                <h5>Pointe-Noire</h5>
+                                <p>Zone Sud</p>
                             </div>
                         </td>
                         <td class="people-destination">
-                            <h5>Brazzaville</h5>
+                            <h5>La ville océane</h5>
                         </td>
                         <td class="people-date">
-                            <h5>26/11/2022</h5>
+                            <h5>Zone sud</h5>
                         </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#editDest">Edit</a></td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </section>
+
+    <!-- Modal add destination -->
+    <div class="modal fade" id="addDest" tabindex="-1" aria-labelledby="addDestLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addDestLabel">Ajouter destination</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-edit">
+                        <form action="">
+                            <div class="user_pic">
+                                <img src="img/" alt="">
+                                <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                                <input type="file" name="picture" id="add_pic">
+                            </div>
+                            <div class="form-group">
+                                <label for="name">Nom destination</label>
+                                <input type="text" name="name" id="name">
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Description</label>
+                                <input type="text" name="description" id="description">
+                            </div>
+                            <div class="form-group">
+                                <label for="zone">Zone</label>
+                                <input type="text" name="zone" id="zone">
+                            </div>
+                            <div class="form-submit solo">
+                                <button class="solo" type="submit">Ajouter</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Modal add destination -->
+
+    <!-- Modal edit destination -->
+    <div class="modal fade" id="editDest" tabindex="-1" aria-labelledby="editDestLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editDestLabel">Editer destination</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-edit">
+                        <form action="">
+                            <div class="user_pic">
+                                <img src="img/" alt="">
+                                <label for="add_pic"><i class="fas fa-camera-alt"></i></label>
+                                <input type="file" name="picture" id="add_pic">
+                            </div>
+                            <div class="form-group">
+                                <label for="name">Nom destination</label>
+                                <input type="text" name="name" id="name">
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Description</label>
+                                <input type="text" name="description" id="description">
+                            </div>
+                            <div class="form-group">
+                                <label for="zone">Zone</label>
+                                <input type="text" name="zone" id="zone">
+                            </div>
+                            <div class="form-submit">
+                                <a href="#">Supprimer</a href="#">
+                                <button type="submit">Mettre à jour</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Modal edit destination -->
 
     <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
     <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
